--- a/gerenzhongxin.html
+++ b/gerenzhongxin.html
@@ -77,7 +77,7 @@
 	</div>
 	<div class="bottom">
 		<div class="content">
-			<a href="index.html"><div class="shou"></div></a>
+			<a href="shouye.html"><div class="shou"></div></a>
 			<div class="fa"></div>
 			<a href="dingdanxiangqing.html"><div class="ding"></div></a>
 			<div class="me"></div>
