--- a/shangjiaxiangqing.html
+++ b/shangjiaxiangqing.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header>
-		<div class="left"></div>
+		<a href="shouye.html"><div class="left"></div></a>
 		<div class="center">
 			<div class="pic"></div>
 			<div class="wz">
@@ -53,7 +53,7 @@
 						<div class="wu">
 							<h5>￥7.99</h5>
 							<img src="img/images2/images/jiahao.png" alt="">
-
+							
 						</div>
 					</div>
 				</li>
@@ -85,9 +85,10 @@
 							<h4>每单限一份优惠</h4>
 						</div>
 						<div class="wu">
-							<h5>￥49.99</h5>
+							<h5>￥45</h5>
 							<img src="img/images2/images/jiahao.png" alt="">
-
+							<h6>1</h6>
+							<img src="img/images2/images/jianhao_03.png" alt="">
 						</div>
 					</div>
 				</li>
@@ -119,5 +120,28 @@
 		</div>
 		<div class="qisong"><a href="jiesuanxiangqing.html">20起送</a></div>
 	</div>
+	<div class="bottom bot">
+		<div class="pic"></div>
+		<div class="weixuan">
+			<h1>￥<span>49.9</span></h1>
+			<h1>另需配送费5元</h1>
+		</div>
+		<div class="qisong">去结算</div>
+	</div>
+
+	<div class="mask">
+		<div class="upper">
+			<div class="tu">
+				 <p>×</p>
+			</div>
+			<div class="xia">
+				<p>超值三人套餐</p>
+				<h6>鸡腿堡/小鸡腿/鸡翅/鸡块/蛋挞/玉米/可乐</h6>
+				<h5>合计：<span>59.9</span></h5>
+				<a href="querendingdan.html"><div class="q">确认支付</div></a>
+			</div>
+		</div>
+	</div>
+	<script src="js/shangjiaxiangqing.js"></script>
 </body>
 </html>
