--- a/zhifuchenggong.html
+++ b/zhifuchenggong.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 	<div class="beijing">
-		<p>&nbsp;126.85</p>
+		<p>&nbsp;54.99</p>
 		<div class="yi">
-			<a href="index.html"><div class="left">返回首页</div></a>
-			<div class="right">继续逛逛</div>
+			<a href="shouye.html"><div class="left">返回首页</div></a>
+			<a href="shangjiaxiangqing.html"><div class="right">继续逛逛</div></a>
 		</div>
 		
 	</div>
