--- a/denglu.html
+++ b/denglu.html
@@ -10,16 +10,32 @@
 </head>
 <body>
 	<header>
-		<input type="text"  placeholder="请输入手机号">
-	    <input type="password"  placeholder="请输入密码">
-	    <input type="text"  placeholder="忘记密码？">
-	    <a href="index.html"><div class="ture">
+		<input type="text"  placeholder="请输入手机号" class="phone">
+	    <input type="password"  placeholder="请输入密码" class="password">
+	    <!--<input type="text"  placeholder="忘记密码？">-->
+	    <div class="ture">
 	    	<i class="iconfont icon-dui"></i>
-	    </div></a>
-	    <a href="denglu.html"><div class="denglu">注册</div></a>
+	    </div>
+
+	    <a href="index.html"><div class="denglu">注册</div></a>
 	    <div class="qq"></div>
 	    <div class="wechat"></div>
 	    <div class="weibo"></div>
 	</header>
 </body>
 </html>
+<script>
+    let phone=document.querySelector(".phone");
+    let password=document.querySelector(".password");
+    let ture=document.querySelector(".ture");
+    password.onblur=function () {
+        if (phone.value=="13593322466" && password.value=="123456"){
+            ture.style.backgroundColor="#0ecf98";
+        }
+    }
+    ture.onclick=function () {
+        if (phone.value=="13593322466" && password.value=="123456"){
+            window.open("shouye.html");
+		}
+    }
+</script>
