--- a/shangjiaxiangqing.html
+++ b/shangjiaxiangqing.html
@@ -118,7 +118,7 @@
 			<h1>未选购商品</h1>
 			<h1>另需配送费5元</h1>
 		</div>
-		<div class="qisong"><a href="jiesuanxiangqing.html">20起送</a></div>
+		<div class="qisong">20起送</div>
 	</div>
 	<div class="bottom bot">
 		<div class="pic"></div>
