--- a/zhifufangshi.html
+++ b/zhifufangshi.html
@@ -14,7 +14,7 @@
 		<div class="top">
 		<a href="shangjiaxiangqing.html">
 			<div class="left"></div></a>
-			<div class="center">确认订单</div>
+			<div class="center">支付方式</div>
 		</div>
 		<div class="dizhi">
 			<div class="yi">
